# mvmp

./: README.md  pyproject.toml
app/: main.py
app/authentication/endpoints/: auth.py
app/authentication/schemas/: auth_schema.py
app/authentication/services/: security.py
app/core/: config.py
app/user/endpoints/: user.py
app/user/models/: user.py
app/user/schemas/: user_schema.py
app/user/services/: security.py  utils.py
migrations/models/: 1_20230428160321_update.py  2_20230428191036_update.py
